# Tutorial-for-Data-Science

./: README.md  back.py  main.py  ml_mini_project_titanic.ipynb  pyproject.toml  thompson_sampling.ipynb  tutorial_numpy.ipynb  tutorial_pandas.ipynb  tutorial_seaborn.ipynb
mini_pj/spaceship_titanic/: guide.ipynb  self.ipynb
recommandar/1_movie/: movie_recommand_system.ipynb
tutorial/: tutorial_eda_kaggle_instacart.ipynb  tutorial_eda_kaggle_starbucks_survey.ipynb  tutorial_numpy.ipynb
