[tool.poetry]
name = "tutorial-for-data-science"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tutorial_for_data_science"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
pandas = "1.5.3"
seaborn = "0.12.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
